--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
   </head>
   <body>
-  
+    <div class="container">
+      <h1>✨Self Care Center✨</h1>
+      <h2>Which type of message</h2>
+      <section class="message-choice">
+        <div>
+          <div>
+            <input type="radio" name="message" id="affirmation">
+            <label for="affirmation">affirmation</label>
+          </div>
+          <div>
+            <input type="radio" name="message" id="mantra">
+            <label for="mantra">mantra</label>
+          </div>
+        </div>
+        <a>Receive Message</a>
+      </section>
+      <section>
+        <img src="./assets/meditate.svg" alt="">
+      </section>
+    </div>
     <script type="text/javascript" src="main.js"></script>
   </body>
 </html>
